--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "core-js": "^3.4.3",
     "countup.js": "^2.0.4",
     "dayjs": "^1.8.17",
+    "echarts": "^5.2.0",
     "element-ui": "^2.13.2",
     "faker": "^4.1.0",
     "flex.css": "^1.1.7",
@@ -77,6 +78,7 @@
     "text-loader": "^0.0.1",
     "vue-cli-plugin-i18n": "^1.0.1",
     "vue-template-compiler": "^2.6.10",
+    "vuedraggable": "^2.24.3",
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-theme-color-replacer": "^1.3.3"
   },
