--- a/package.json
+++ b/package.json
@@ -40,9 +40,10 @@
     "sortablejs": "^1.10.1",
     "ua-parser-js": "^0.7.20",
     "vant": "^2.11.1",
+    "vee-validate": "^2.0.0",
     "vue": "^2.6.11",
     "vue-grid-layout": "^2.3.7",
-    "vue-i18n": "^8.15.1",
+    "vue-i18n": "^8.25.0",
     "vue-json-tree-view": "^2.1.4",
     "vue-router": "^3.1.3",
     "vue-splitpane": "^1.0.6",
