--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "vue-router": "^3.1.3",
     "vue-splitpane": "^1.0.6",
     "vue-ueditor-wrap": "^2.4.1",
+    "vue-uuid": "^2.0.2",
     "vuex": "^3.1.2",
     "wl-vue-select": "^0.5.9"
   },
@@ -78,6 +79,7 @@
     "sass-loader": "^10.1.1",
     "svg-sprite-loader": "^4.1.6",
     "text-loader": "^0.0.1",
+    "uuid": "^8.3.2",
     "vue-cli-plugin-i18n": "^1.0.1",
     "vue-template-compiler": "^2.6.10",
     "vuedraggable": "^2.24.3",
