--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^6.2.2",
+    "is-online": "^9.0.1",
     "less": "^3.12.2",
     "less-loader": "^7.1.0",
     "sass": "^1.35.2",
