--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lowdb": "^1.0.0",
     "marked": "^2.0.0",
     "nprogress": "^0.2.0",
+    "qrcodejs2": "0.0.2",
     "qs": "^6.9.4",
     "quill": "^1.3.7",
     "screenfull": "^5.0.2",
