--- a/package.json
+++ b/package.json
@@ -33,14 +33,14 @@
     "lowdb": "^1.0.0",
     "marked": "^2.0.0",
     "nprogress": "^0.2.0",
-    "qrcodejs2": "0.0.2",
+    "qrcodejs2": "^0.0.2",
     "qs": "^6.9.4",
     "quill": "^1.3.7",
     "screenfull": "^5.0.2",
     "simplemde": "^1.11.2",
     "sortablejs": "^1.10.1",
     "ua-parser-js": "^0.7.20",
-    "vant": "^2.11.1",
+    "vant": "^2.12.29",
     "vee-validate": "^2.0.0",
     "vue": "^2.6.11",
     "vue-grid-layout": "^2.3.7",
