--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "countup.js": "^2.0.4",
     "dayjs": "^1.10.7",
     "echarts": "^5.2.0",
-    "element-ui": "^2.13.2",
+    "element-ui": "^2.15.6",
     "faker": "^4.1.0",
     "flex.css": "^1.1.7",
     "fuse.js": "^5.2.3",
@@ -87,6 +87,13 @@
     "vuedraggable": "^2.24.3",
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-theme-color-replacer": "^1.3.3"
+  },
+  "eslintconfig":{
+    "root":true,
+    "env":{
+      "node":true,
+      "browser":true
+    }
   },
   "config": {
     "commitizen": {
